--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,38 +3,35 @@ pipeline{
     stages{
         stage('init build images'){
             steps {
+                sh 'whoami && mvn --version || sudo apt update && sudo apt install maven -y || exit 1'
+              
                 script {
-            if (!fileExists('/home/ubuntu/.m2')) {
-                sh 'whoami && sudo apt update && sudo apt install maven -y || exit 1'
-            }
-                }
-                script {
-            if (!fileExists('/home/ubuntu/DockJaNetes')) {
-                sh 'cd /home/ubuntu && git clone https://github.com/sharma04500/DockJaNetes.git'
+            if (!fileExists('$HOME/DockJaNetes')) {
+                sh 'cd $HOME && git clone https://github.com/sharma04500/DockJaNetes.git'
             }
                 }
             steps {
-                sh 'cd /home/ubuntu/DockJaNetes/ && git pull origin main || exit 1'
+                sh 'cd $HOME/DockJaNetes/ && git pull origin main || exit 1'
             }
             }
         }
         stage('build shopfront image'){
             steps{
-                sh 'cd /home/ubuntu/DockJaNetes/shopfront/ && mvn clean install'
+                sh 'cd $HOME/DockJaNetes/shopfront/ && mvn clean install'
                 sh 'for i in `docker image ls -aq`; do docker image rm -f $i; done'
-                sh 'cd /home/ubuntu/DockJaNetes/shopfront/ && docker image build . -t akells05/shopfront:latest'
+                sh 'cd $HOME/DockJaNetes/shopfront/ && docker image build . -t akells05/shopfront:latest'
             }
         }
         stage('build prodcat image'){
             steps{
-                sh 'cd /home/ubuntu/DockJaNetes/productcatalogue/ && mvn clean install'
-                sh 'cd /home/ubuntu/DockJaNetes/productcatalogue/ && docker image build . -t akells05/prodcat:latest'
+                sh 'cd $HOME/DockJaNetes/productcatalogue/ && mvn clean install'
+                sh 'cd $HOME/DockJaNetes/productcatalogue/ && docker image build . -t akells05/prodcat:latest'
             }
         }
         stage('build stockmanager image'){
             steps{
-                sh 'cd /home/ubuntu/DockJaNetes/stockmanager/ && mvn clean install'
-                sh 'cd /home/ubuntu/DockJaNetes/stockmanager/ && docker image build . -t akells05/stockmanager:latest'
+                sh 'cd $HOME/DockJaNetes/stockmanager/ && mvn clean install'
+                sh 'cd $HOME/DockJaNetes/stockmanager/ && docker image build . -t akells05/stockmanager:latest'
             }
         }
         stage('push all the images to dockerhub'){
@@ -53,17 +50,17 @@ pipeline{
         }
         stage('Deploy Shopfront to K8s'){
             steps{
-                sh 'cd /home/ubuntu/DockJaNetes/kubernetes/ && kubectl create -f  shopfront-service.yaml'
+                sh 'cd $HOME/DockJaNetes/kubernetes/ && kubectl create -f  shopfront-service.yaml'
             }
         }
         stage('Deploy productcatalogue to K8s'){
             steps{
-                sh 'cd /home/ubuntu/DockJaNetes/kubernetes/ && kubectl create -f productcatalogue-service.yaml'
+                sh 'cd $HOME/DockJaNetes/kubernetes/ && kubectl create -f productcatalogue-service.yaml'
             }
         }
         stage('Deploy stockmanager to K8s'){
             steps{
-                sh 'cd /home/ubuntu/DockJaNetes/kubernetes/ && kubectl create -f stockmanager-service.yaml'
+                sh 'cd $HOME/DockJaNetes/kubernetes/ && kubectl create -f stockmanager-service.yaml'
             }
         }
    }
