--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -4,10 +4,11 @@ pipeline{
         stage('init build images'){
             steps {
                 sh 'whoami && mvn --version || sudo apt update && sudo apt install maven -y || exit 1'
-              
+            }
+            steps{
                 script {
             if (!fileExists('$HOME/DockJaNetes')) {
-                sh 'cd $HOME && git clone https://github.com/sharma04500/DockJaNetes.git'
+                sh "cd $HOME && git clone https://github.com/sharma04500/DockJaNetes.git"
             }
                 }
             steps {
